--- a/index.html
+++ b/index.html
@@ -177,27 +177,20 @@
       <div class="gallery">
         <picture class="gallery__image">
           <img src="./images/sunset.png"
-            alt="закат у спокойного моря, на фоне гор, является изображением совета: 'Представьте небо и облака'"
+            alt="закат у спокойного моря, на фоне гор, является изображением совета: Представьте небо и облака"
             loading="lazy" class="gallery__image-item">
         </picture>
         <picture class="gallery__image">
-          <img src="./images/ice-cream.png"
-            alt="улыбающаяся миска с живыми шариками мороженного, украшенная киви, клубникой и корицей, является изображением совета: 'Хорошо ешьте'"
-            loading="lazy" class="gallery__image-item">
+          <img src="./images/ice-cream.png" alt="Хорошо ешьте" loading="lazy" class="gallery__image-item">
         </picture>
         <picture class="gallery__image">
-          <img src="./images/tape.png"
-            alt="кассета для магнитофона в окружении компьютерных иконок, является изображением совета: 'Включите музыку'"
-            loading="lazy" class="gallery__image-item">
+          <img src="./images/tape.png" alt="Включите музыку" loading="lazy" class="gallery__image-item">
         </picture>
         <picture class="gallery__image">
-          <img src="./images/books.png" alt="стопка книг с чашкой кофе на них, является изображением совета: 'Читайте'"
-            loading="lazy" class="gallery__image-item">
+          <img src="./images/books.png" alt="Читайте" loading="lazy" class="gallery__image-item">
         </picture>
         <picture class="gallery__image">
-          <img src="./images/street.png"
-            alt="улица, вдоль которой расположены двухэтажные дома, является изображением совета: 'Прогуляйтесь'"
-            loading="lazy" class="gallery__image-item">
+          <img src="./images/street.png" alt="Прогуляйтесь" loading="lazy" class="gallery__image-item">
         </picture>
       </div>
     </section>
