third commit corrected

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     </section>
   </main>
   <footer class="footer decorated-zone">
-    <h5 class="title shadow">focus</h5>
+    <h5 class="header-title shadow">focus</h5>
   </footer>
 </body>
 
